# cmake-exercise

./: README.md
example01/: CMakeLists.txt
example01/include/: func1.h  func2.h
example01/src/: CMakeLists.txt  func2.cpp
example02/: CMakeLists.txt
example02/math/: math.cpp  math.h
example02/mymath/: mymath.cpp
example03/: CMakeLists.txt
example03/mymath/include/: mymath.h
example03/src/: main.cpp
example04/: CMakeLists.txt
example04/src/: app.cpp  main.cpp
example05/: CMakeLists.txt
example05/src/: main.cpp
example1/: CMakeLists.txt
example1/src/: CMakeLists.txt  func1.cpp  main.cpp
